discussion/kv_engine/166920/166920_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Merge commit '3010db473' into couchbase/cheshire-cat

* commit '3010db473':
  MB-47318: [BP] Add PassiveStream always buffered mode

Change-Id: I9138f04d27fb0ca2fc7a043c42d542eed5edbc1f

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2021-12-03 14:49:35.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2021-12-03 14:49:54.000000000
Message: 
Patch Set 1: Well-Formed-1

Branch restricted. PLEASE READ this URL: 

http://server.jenkins.couchbase.com/job/restricted-branch-check/276431/artifact/restricted.html : FAILURE
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-12-03 16:02:35.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-cheshire-cat/288/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-cheshire-cat/kv_engine/engines/ep/src/dcp/consumer.cc:1951:20:
error: use of undeclared identifier "ENGINE_SUCCESS"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-cheshire-cat/288/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-cheshire-cat/281/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/engines/ep/src/dcp/consumer.cc:1951:20: error: use of undeclared identifier "ENGINE_SUCCESS" [clang-diagnostic-error]
            return ENGINE_SUCCESS;
                   ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-cheshire-cat/281/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/engines/ep/src/dcp/consumer.cc:1951:20:
error: use of undeclared identifier "ENGINE_SUCCESS" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-cheshire-cat/281/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-cheshire-cat/427/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\dcp\consumer.cc(1951): error C2065: "ENGINE_SUCCESS": undeclared identifier ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-cheshire-cat/427/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/cheshire-cat/304/ : FAILURE

Compile error at [2021-12-03T15:41:54.558Z] ../kv_engine/engines/ep/src/dcp/consumer.cc:1951:20:
error: use of undeclared identifier "ENGINE_SUCCESS"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/cheshire-cat/304/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/cheshire-cat/292/ : FAILURE

Compile error at [2021-12-03T15:50:49.476Z] ../kv_engine/engines/ep/src/dcp/consumer.cc:1951:20:
error: ?ENGINE_SUCCESS? was not declared in this scope; did you mean ?EXIT_SUCCESS??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/cheshire-cat/292/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/cheshire-cat/295/ : FAILURE

Compile error at [2021-12-03T15:43:08.290Z] ../kv_engine/engines/ep/src/dcp/consumer.cc:1951:20:
error: use of undeclared identifier "ENGINE_SUCCESS"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/cheshire-cat/295/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/cheshire-cat/288/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/cheshire-cat/209/ : FAILURE

Compile error at [2021-12-03T16:01:45.295Z] ../kv_engine/engines/ep/src/dcp/consumer.cc:1951:20:
error: ?ENGINE_SUCCESS? was not declared in this scope; did you mean ?EXIT_SUCCESS??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/cheshire-cat/209/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/cheshire-cat/295/ : FAILURE

Compile error at [2021-12-03T15:09:29.611Z] ../kv_engine/engines/ep/src/dcp/consumer.cc:1951:20:
error: use of undeclared identifier "ENGINE_SUCCESS"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/cheshire-cat/295/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/13156/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
